[gd_scene load_steps=14 format=3 uid="uid://bhjv2dj2o3a02"]

[ext_resource type="Script" path="res://Ship/VFX/drive.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dhfx6pw5mlc4f" path="res://Ship/particel/fire_01.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dkyspw7m7u3w6" path="res://Ship/particel/smoke_07.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dbglhilf87o5" path="res://Ship/particel/fire_02.png" id="4"]
[ext_resource type="PackedScene" uid="uid://dykwhltqnc53d" path="res://Util/FadingAudio3DStream.tscn" id="5"]

[sub_resource type="StandardMaterial3D" id="1"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("4")
disable_receive_shadows = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="2"]
material = SubResource("1")
orientation = 2

[sub_resource type="Gradient" id="3"]
offsets = PackedFloat32Array(0, 0.496689, 0.834234, 1)
colors = PackedColorArray(0.980392, 0.0117647, 0.0117647, 1, 0.964844, 0.723633, 0, 1, 0.376471, 0.364706, 0.364706, 0.937255, 0, 0, 0, 0)

[sub_resource type="StandardMaterial3D" id="4"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2")
disable_receive_shadows = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="5"]
material = SubResource("4")
orientation = 2

[sub_resource type="StandardMaterial3D" id="6"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3")
disable_receive_shadows = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="7"]
material = SubResource("6")
size = Vector2(0.1, 0.1)
orientation = 0

[sub_resource type="Gradient" id="8"]
offsets = PackedFloat32Array(0, 0.582781, 0.84106)
colors = PackedColorArray(0, 0, 0, 1, 0.622047, 0.622047, 0.622047, 1, 1, 1, 1, 0.396078)

[node name="particel" type="Node3D"]
script = ExtResource("1")

[node name="Fire1" type="CPUParticles3D" parent="."]
transform = Transform3D(0.998251, -0.0479305, 0.0346076, 0.0468094, 0.998375, 0.0325107, -0.0361096, -0.0308339, 0.998872, 0, 0, 0)
amount = 32
lifetime = 0.89
lifetime_randomness = 0.28
local_coords = true
mesh = SubResource("2")
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 4.0
angular_velocity_max = 30.0
linear_accel_min = 2.0
linear_accel_max = 3.0
angle_min = 30.0
angle_max = 40.0
scale_amount_max = 2.5
color_ramp = SubResource("3")

[node name="Fire2" type="CPUParticles3D" parent="."]
transform = Transform3D(0.998251, -0.0479305, 0.0346076, 0.0468094, 0.998375, 0.0325107, -0.0361096, -0.0308339, 0.998872, 0, 0, 0)
amount = 32
lifetime = 0.89
lifetime_randomness = 0.28
local_coords = true
mesh = SubResource("5")
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 3.0
initial_velocity_max = 4.0
angular_velocity_min = 20.0
angular_velocity_max = 30.0
scale_amount_max = 2.0
color_ramp = SubResource("3")

[node name="smoke" type="CPUParticles3D" parent="."]
transform = Transform3D(0.998251, -0.0479305, 0.0346076, 0.0468094, 0.998375, 0.0325107, -0.0361096, -0.0308339, 0.998872, -0.00065732, 0, -0.00689006)
transparency = 0.21
amount = 36
explosiveness = 0.08
randomness = 0.06
lifetime_randomness = 0.32
local_coords = true
mesh = SubResource("7")
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 3.0
initial_velocity_max = 4.0
angular_velocity_min = 30.0
angular_velocity_max = 70.0
scale_amount_max = 18.04
color_ramp = SubResource("8")

[node name="EngineSound" parent="." instance=ExtResource("5")]
fadeIn_duration = 0.5
fadeOut_duration = 0.9
